--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   <div class="row align-items-center">
                       <div class="col-md-7">
                           <h1>Mega LCD TV Sports</h1>
-                          <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
+                          <p>This is the best tv in the world for people who just want to waste time in front of tv. Lorem ipsum dolor sit amet.</p>
                           <h1 class="price">$1200</h1>
                           <button class="buy-now-button">BUY NOW</button>
                       </div>
@@ -58,7 +58,7 @@
                   <div class="row align-items-center">
                       <div class="col-md-7">
                             <h1>Cool Dude Headphone</h1>
-                            <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
+                            <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                             <h1 class="price">$420</h1>
                             <button class="buy-now-button">BUY NOW</button>
                       </div>
@@ -71,7 +71,7 @@
                   <div class="row align-items-center">
                       <div class="col-md-7">
                             <h1>X-Box for your living room</h1>
-                            <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
+                            <p>This is the best x-bos in the world for people who just want to waste time in front of x-bos. Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                             <h1 class="price">$600</h1>
                             <button class="buy-now-button">BUY NOW</button>
                       </div>
@@ -114,6 +114,101 @@
         </div>
     </div>
 
+    <div class="container shoes" id="shoes">
+        <h3>Shoes</h3>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Supply 350</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5>$120</h5>
+                  <button class="buy-now-button">BUY NOW >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Nike 360</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5>$320</h5>
+                  <button class="buy-now-button">BUY NOW >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Red Airmax</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                  <h5>$350</h5>
+                  <button class="buy-now-button">BUY NOW >></button>
+                </div>
+              </div>
+            </div>
+          </div>
+    </div>
+
+    <div class="container" id="backpack">
+        <h3>Backpack</h3>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Red Backpack</h5>
+                  <h5>$125</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p> 
+                </div>
+                <div class="card-footer">
+                    <button class="buy-now-button">BUY NOW >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Blue Backpack</h5>
+                  <h5>$220</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="card-footer">
+                    <button class="buy-now-button">BUY NOW >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Black Backpack</h5>
+                  <h5>$169</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional..</p>
+                </div>
+                <div class="card-footer">
+                    <button class="buy-now-button">BUY NOW >></button>
+                </div>
+              </div>
+            </div>
+          </div>
+    </div>
+
+    <div class="container d-flex align-items-center justify-content-center orange-bg" id="subscribe">
+       <div>
+           <h3>LET'S STAY IN TOUCH</h3>
+            <h6>Get updates on sales, specials and more</h6>
+            <input class="form-control" placeholder="Enter your email" type="text" name="" id="">
+            <button class="buy-now-button">Submit</button>
+       </div>
+    </div>
+    <footer>
+       <small>©2022. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small>
+    </footer>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>  
 </body>
